@@ -19,6 +19,10 @@ Changes to next release:
     matches Intel docs
   - fixed using invalid segment register for MOV instruction (h.johansson)
   - fixed ET bit mismatch between CR0 and SMSW instruction
+  - fixed undocumented flags handling for BTS, BTR and SHR instructions
+    (Stanislav Shwartsman)
+  - fixed CF flag handling for SHL instruction in x86-64 mode
+    (Stanislav Shwartsman)
 
 - FPU
   - totally rewritten all FPU code based on softfloat library 
